dont keep logo fixed on mobile

--- a/apps/core/static/scss/_header.scss
+++ b/apps/core/static/scss/_header.scss
@@ -1,9 +1,12 @@
 .header {
     width: 100%;
-
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 3;
+
+    @include media-breakpoint-up(sm) {
+        position: fixed;
+    }
 
     a,
     button {
@@ -95,6 +98,13 @@ a.header__brand {
     justify-content: center;
 
     @include media-breakpoint-down(sm) {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+
         &:after {
             content: "";
             display: block;
@@ -158,9 +168,10 @@ a.header__brand {
 button.header__bar__toggle {
     margin-top: 0.3em;
 
-    position: absolute;
+    position: fixed;
     right: $spacer - $navbar-toggler-padding-x;
     top: $spacer - $navbar-toggler-padding-y;
+    z-index: 3;
 
 
     font-family: $font-family-monospace;
